Item3213: prevent vertical cutting off characters
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN/twikiplugins@12105 a00a5322-12db-0310-a70b-8735589c885e

--- a/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -73,7 +73,7 @@ h1 {
 	margin:0 0 .5em 0;
 }
 h1 { font-size:210%; }
-h2 { font-size:160%; }
+h2 { font-size:150%; }
 h3 { font-size:135%; font-weight:bold; }
 h4 { font-size:122%; font-weight:bold; }
 h5 { font-size:110%; font-weight:bold; }
@@ -81,8 +81,8 @@ h6 { font-size:95%; font-weight:bold; }
 h2, h3, h4, h5, h6 {
 	display:block;
 	/* give header a background color for easy scanning:*/
-	padding:.1em 5px;
-	margin:1em -5px .35em -5px;
+	padding:.15em 5px;
+	margin:1.25em -5px .35em -5px;
 	border-width:0 0 1px 0;
 	border-style:solid;
 	height:auto;	
@@ -164,7 +164,7 @@ select option {
 .twikiCheckbox {
 	border-width:1px;
 	border-style:solid;
-	padding:.15em .35em;
+	padding:.1em .3em;
 	font-size:94%;
 	font-weight:bold;
 	vertical-align:middle;
@@ -580,7 +580,6 @@ a.twikiLinkInHeaderRight {
 #patternLeftBarContents li {
 	margin:2px 0 3px 0;
 	line-height:1.1em;
-	overflow:hidden;	
 }
 #patternLeftBarContents h2 {
 	border:none;
